feat: add checkboxes in top/withdraw, add custom input

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1383,6 +1383,8 @@
       "offer": "Balance Top-Up Request",
       "amount": "Top-Up Amount",
       "required": "Enter the amount",
+      "min": "Minimum amount",
+      "max": "Maximum amount",
       "placeholder": "Enter the amount",
       "payment_method": "Select a payment method",
       "fetch_error": "Request error"
@@ -1410,6 +1412,12 @@
       "min": "Minimum Amount",
       "max": "Maximum Amount"
     },
+    "commission": {
+    "title": "Commission",
+    "enrollment": "Amount to be credited",
+    "include": "Include commission",
+    "withdraw_all": "Withdraw all funds"
+    },
     "guide": {
       "title": "Step-by-Step Guide",
       "entity": "Lorem ipsum dolor sit amet consectetur. Tincidunt sed ut in massa pulvinar id. Volutpat aliquam in lectus fringilla mauris praesent convallis. Volutpat neque arcu condimentum cursus sit. Id auctor neque elementum ut turpis sed. Faucibus a posuere gravida vel amet vulputate fringilla. Pulvinar orci consectetur viverra nisi mauris ornare lobortis.\n\nNunc quis libero proin etiam quis lorem nisl. Et purus massa cras suscipit aliquet diam justo ac. In in vel tempor eget nisl ultricies vitae. Pretium netus dignissim ante feugiat quis nunc id lorem. Urna adipiscing urna nisi posuere vitae augue. Bibendum et est vehicula ac lacus praesent. Quam dapibus sem laoreet tristique non in. Sem a mattis massa eget justo felis id.\n\nAugue vitae diam blandit dictum proin tristique morbi suspendisse. In sed dictum pulvinar scelerisque viverra a. Donec ut cursus sit sed. Duis odio vestibulum justo nisi facilisi potenti. At quis luctus laoreet diam ac metus tortor cursus et. Massa consectetur diam enim viverra dapibus. Feugiat et proin purus fermentum sociis dolor. Vel porttitor quam ornare non interdum nunc.",
@@ -1420,7 +1428,7 @@
     "pay": {
       "title": "To Charge",
       "sub_title": "From wallet",
-      "text": "Including Commission",
+      "text": "Commission",
       "will_be_charged": "To be Charged"
     },
     "accept": {
