--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -1383,6 +1383,8 @@
       "offer": "Balansni to'ldirish uchun ariza",
       "amount": "To'ldirish summasi",
       "required": "Summani kiriting",
+      "min": "Eng kam miqdor",
+      "max": "Maksimal miqdor",
       "placeholder": "Summani kiriting",
       "payment_method": "To'lov usulini tanlang",
       "fetch_error": "So'rov xatosi"
@@ -1410,6 +1412,12 @@
       "min": "Minimal summa",
       "max": "Maksimal summa"
     },
+    "komissiya": {
+      "title": "Komissiya",
+      "enrollment": "To'lanadigan summa",
+      "include": "Komissiya kiritish",
+      "withdraw_all": "Barcha mablag'larni yechib olish"
+    },
     "guide": {
       "title": "Bosqichma-bosqich qo'llanma",
       "entity": "Lorem ipsum dolor sit amet consectetur. Tincidunt sed ut in massa pulvinar id. Volutpat aliquam in lectus fringilla mauris praesent convallis. Volutpat neque arcu condimentum cursus sit. Id auctor neque elementum ut turpis sed. Faucibus a posuere gravida vel amet vulputate fringilla. Pulvinar orci consectetur viverra nisi mauris ornare lobortis.\n\nNunc quis libero proin etiam quis lorem nisl. Et purus massa cras suscipit aliquet diam justo ac. In in vel tempor eget nisl ultricies vitae. Pretium netus dignissim ante feugiat quis nunc id lorem. Urna adipiscing urna nisi posuere vitae augue. Bibendum et est vehicula ac lacus praesent. Quam dapibus sem laoreet tristique non in. Sem a mattis massa eget justo felis id.\n\nAugue vitae diam blandit dictum proin tristique morbi suspendisse. In sed dictum pulvinar scelerisque viverra a. Donec ut cursus sit sed. Duis odio vestibulum justo nisi facilisi potenti. At quis luctus laoreet diam ac metus tortor cursus et. Massa consectetur diam enim viverra dapibus. Feugiat et proin purus fermentum sociis dolor. Vel porttitor quam ornare non interdum nunc.",
@@ -1419,7 +1427,7 @@
     },
     "pay": {
       "title": "To'lov uchun",
-      "text": "Komissiyani hisobga olgan holda",
+      "text": "Komissiya",
       "sub_title": "Hisobingizdan",
       "will_be_charged": "Hisobingizga"
     },
