feat: finish organization page

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1141,6 +1141,213 @@
     }
   },
 
+    "add_organization": {
+    "title": "Добавление организации",
+    "types": {
+      "self_employed": "Самозанятый",
+      "legal": "Юр. лицо и ИП"
+    },
+    "add_form": {
+      "title": "Заявка на добавление организации",
+      "PNFL": {
+        "title": "ПИНФЛ",
+        "default_value": "12345678901234",
+        "description": "Персональный идентификационный номер физического лица. Введите корректный ПИНФЛ, так как он необходим для проверки ваших данных.",
+        "error": {
+          "required": "неверный формат, количество символов - 14"
+        }
+      },
+      "INN": {
+        "title": "ИНН",
+        "default_value": "123456789",
+        "description": "Укажите идентификационный номер налогоплательщика (ИНН) вашей компании или индивидуального предпринимателя. Этот номер используется для налогового учета и идентификации организации.",
+        "error": {
+          "required": "неверный формат, количество символов - 9"
+        }
+      },
+
+      "info_card": {
+        "text": "Добавление организации нужно для оформления документов, получения выплат на расчётный счёт (карту) и участия в рекламных кампаниях от имени Юр. лица, ИП или самозанятого. Это важно для прозрачности, доверия и правильного документооборота через нашего партнера Didox. При возникновении затруднений рекомендуем ознакомиться с подробным гайдом по ссылке",
+        "link": "Как  добавить организацию и для чего это нужно?"
+      },
+
+      "buttons": {
+        "next": "Далее",
+        "accept": "Подтвердить"
+      },
+
+      "didox": {
+        "text": "После нажатия кнопки «Подтвердить» вы будете перенаправлены на сайт Didox для подписания публичной оферты. После успешного подтверждения ваша организация будет добавлена и сохранена на платформе."
+      }
+
+
+    },
+
+    "not_found": {
+    "types": {
+      "self_employed": "ПИНФЛ",
+      "legal": "ИНН"
+    },
+      "title": "не найден в системе Didox",
+      "text": "Для продолжения работы необходимо зарегистрировать самозанятого в Didox. Нажмите «Зарегистрировать» и пройдите процесс регистрации. Если у вас остались вопросы, рекомендуем ознакомиться с подробным гайдом: ",
+      "link": "Как зарегистрироваться в Didox, если у меня Самозанятый?",
+      
+      "buttons": {
+        "register": "Зарегистрировать",
+        "cancel": "Отменить"
+      }
+    },
+
+
+
+    "basic_info": {
+      "basic_info": "Общие данные",
+      "name": {
+        "title": "Ф.И.О",
+        "default_value": "Gomer German",
+        "description": "Введите вашу фамилию, имя и отчество полностью, как указано в паспорте или другом официальном документе. Обратите внимание, что данные должны совпадать с информацией в вашем банке.",
+        "error": {
+          "required": "поле не может быть пустым"
+        }
+      },
+      "registration_number": {
+        "title": "Номер регистрации",
+        "default_value": "12345678",
+        "description": "Укажите ваш регистрационный номер, присвоенный вам в процессе оформления. Этот номер используется для идентификации и проверки вашей личности.",
+        "error": {
+          "required": "введите без лишних символов"
+        }
+      },
+      "registration_date": {
+        "title": "Дата регистрации",
+        "default_value": "22.09.2023",
+        "description": "Введите дату вашей регистрации в формате ДД.ММ.ГГГГ. Убедитесь, что данные соответствуют официальным документам.",
+        "error": {
+          "required": "неверный формат, введите по формату дд.мм.гггг: 22.09.2023"
+        }
+      },
+      "PNFL": {
+        "title": "ПИНФЛ",
+        "default_value": "12345678901234",
+        "description": "Персональный идентификационный номер физического лица. Введите корректный ПИНФЛ, так как он необходим для проверки ваших данных.",
+        "error": {
+          "required": "неверный формат, количество символов - 14"
+        }
+      },
+      "entity": {
+        "title": "Наименование фирмы",
+        "default_value": "Название юрлица",
+        "description": "Укажите полное официальное название вашей компании в соответствии с регистрационными документами. Это необходимо для корректного оформления платежей и документов.",
+        "error": {
+          "required": "поле не может быть пустым"
+        }
+      },
+      "address": {
+        "title": "Юридический адрес",
+        "default_value": "Юридический адрес",
+        "description": "Введите адрес, по которому зарегистрирована ваша компания. Он может отличаться от фактического места ведения деятельности, но должен совпадать с данными в регистрационных документах.",
+        "error": {
+          "required": "поле не может быть пустым"
+        }
+      },
+      "INN": {
+        "title": "ИНН",
+        "default_value": "123456789",
+        "description": "Укажите идентификационный номер налогоплательщика (ИНН) вашей компании или индивидуального предпринимателя. Этот номер используется для налогового учета и идентификации организации.",
+        "error": {
+          "required": "неверный формат, количество символов - 9"
+        }
+      },
+      "individual": {
+        "title": "Наименование ИП",
+        "default_value": "Наименование ИП",
+        "description": "Укажите полное имя индивидуального предпринимателя, как указано в регистрационных документах. Это имя используется для идентификации в юридических и финансовых документах.",
+        "error": {
+          "required": "поле не может быть пустым"
+        }
+      }
+    },
+    "bank_data": {
+      "bank_data": "Банковские данные",
+      "bank_mfo": {
+        "title": "МФО банка",
+        "default_value": "12345",
+        "description": "Введите межфилиальный оборотный код (МФО) банка, в котором у вас открыт счет. Этот код используется для обработки платежей.",
+        "error": {
+          "required": "неверный формат, количество символов - 5"
+        }
+      },
+      "bank_name": {
+        "title": "Наименование банка",
+        "default_value": "Наименование банка",
+        "description": " Укажите официальное название банка, в котором у вас открыт счет. Это важно для корректного зачисления средств на ваш счет.",
+        "error": {
+          "required": "поле не может быть пустым"
+        }
+      },
+      "checking_account": {
+        "title": "Расчетный счёт",
+        "default_value": "12345678901234567890",
+        "description": "Укажите номер расчетного счета, открытого на ваше имя или имя вашей организации в банке. Этот счет используется для перевода средств и других финансовых операций, связанных с вашей деятельностью.",
+        "error": {
+          "required": "неверный формат, количество символов - 20"
+        }
+      },
+      "transit_account": {
+        "title": "Транзитный счёт",
+        "default_value": "12345678901234567890",
+        "description": "Введите номер вашего транзитного счета, если он требуется для перевода средств. Этот счет используется для обработки платежей и может отличаться от вашего расчетного счета.",
+        "error": {
+          "required": "неверный формат, количество символов - 20"
+        }
+      },
+      "card_number": {
+        "title": "Данные карты",
+        "default_value": "9860123412341234",
+        "description": "Укажите номер вашей банковской карты без пробелов. Будьте внимательны при вводе, так как ошибка в номере может привести к отклонению платежа.",
+        "error": {
+          "required": "неверный формат, количество символов - 16"
+        }
+      },
+      "card_date": {
+        "title": "Срок действия карты",
+        "default_value": "мм/гг",
+        "description": "Введите срок действия вашей карты в формате MM/YY (месяц/год). Эти данные необходимы для обработки транзакций и подтверждения актуальности карты.",
+        "error": {
+          "required": "введите дату по формату - мм/гг: 09/23"
+        }
+      }
+    },
+    "contact": {
+      "contact": "Контактные данные",
+      "phone": {
+        "title": "Номер телефона",
+        "default_value": "+998909000123",
+        "description": "Введите ваш действующий номер телефона в международном формате. Этот номер может использоваться для связи и подтверждения платежей.",
+        "error": {
+          "required": "введите номер телефона по нужному формату"
+        }
+      },
+      "email": {
+        "title": "E-mail",
+        "default_value": "sample@gmail.com",
+        "description": "Укажите ваш актуальный адрес электронной почты. На этот e-mail могут приходить уведомления о статусе выплат и другие важные сообщения.",
+        "error": {
+          "required": "несуществующая почта"
+        }
+      }
+    },
+
+    "accept": {
+      "text1": "Достоверность данных подтверждаю, с",
+      "span1": "условиями сервиса",
+      "and": "и",
+      "span2": "правилами оферты",
+      "text2": "ознакомлен и принимаю их."
+    }
+  },
+
+
   "add_profile": {
     "add_profile": "Добавление данных",
     "types": {
@@ -2097,6 +2304,13 @@
         "alert": "Заполните все поля..."
       }
     },
+    "add_organization": {
+      "accept": {
+        "success": "Организация успешно отправлена на модерацию",
+        "error": "При добавлении организации произошла ошибка"
+      }
+    },
+
     "add_profile": {
       "create": {
         "success": "Данные успешно добавлены",
