feat: finish add 4th step in add channel page

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -932,7 +932,8 @@
       "step": "этап",
       "identification": "Идентификация площадки",
       "description": "Описание площадки",
-      "accept": "Подтверждение"
+      "accept": "Подтверждение данных",
+      "organization": "Добавление организации"
     },
     "identification": {
       "info": {
