feat: finish change topup/withdraw wallet

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1253,8 +1253,6 @@
       }
     },
 
-
-
     "basic_info": {
       "basic_info": "Общие данные",
       "name": {
@@ -1655,23 +1653,44 @@
   },
 
   "wallet": {
+    "amount": {
+      "required": "Введите сумму",
+      "min": "Минимальная сумма",
+      "max": "Максимальная сумма"
+    },
+
     "topup": {
       "title": "Пополнение баланса",
       "offer": "Заявка на пополнение баланса",
-      "amount": "Сумма пополнения",
-      "required": "Введите сумму",
-      "min": "Минимальная сумма",
-      "max": "Максимальная сумма",
-      "placeholder": "Введите сумму",
       "payment_method": "Выберите способ оплаты",
-      "fetch_error": "Ошибка запроса"
+      "fetch_error": "Ошибка запроса",
+
+      "amount": {
+        "title": "Сумма пополнения",
+        "default_value": "50 000",
+        "placeholder": "Введите сумму пополнения",
+        "description": "Введите сумму пополнения баланса. Минимальная сумма 50 000 сум. Максимальная сумма 1 000 000 000 сум."
+      },
+
+      "success": {
+        "title": "Ваш заявка успешна обработана!",
+        "text": "Пожалуйста, внимательно указывайте назначение платежа и реквизиты в точном соответствии с данными в счёте на оплату. Это необходимо для корректного и быстрого зачисления средств. После поступления средств на указанный расчетный счет, ваш баланс будет пополнен."
+      }
     },
     "withdraw": {
       "title": "Вывод средств",
       "offer": "Заявка на вывод средств",
-      "amount": "Сумма вывода",
-      "required": "Введите сумму",
-      "placeholder": "Введите сумму"
+      "amount": {
+        "title": "Сумма списания",
+        "default_value": "50 000",
+        "placeholder": "Введите сумму списания",
+        "description": "Введите сумму списания баланса. Минимальная сумма 50 000 сум. Максимальная сумма 1 000 000 000 сум."
+      },
+
+      "success": {
+        "title": "Ваш заявка успешна обработана!",
+        "text": "Ваша заявка на вывод аванса успешно отправлена. Ожидайте подтверждение и поступление средств в ближайшее время."
+      }
     },
     "types": {
       "selfemployed": "Физ. лицо",
