feat: finish payment choose wallets

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1852,10 +1852,11 @@
     },
 
     "payment": {
-      "title": "Оплата заказа",
+      "title": "Оплата проекта",
       "pay": "Оплатить",
       "approve": "На согласование",
       "price": "Итоговая сумма:",
+      "choose_wallet": "Выберите кошелек для оплаты проекта",
       "description": "Остался последний шаг для запуска эффективной рекламной кампании! Как только вы оплатите заказ, владельцы площадок моментально получат уведомления и начнут размещение вашей рекламы"
     },
 
