feat: add choose legal and edit styles

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1204,6 +1204,11 @@
     },
     "add_form": {
       "title": "Заявка на добавление организации",
+      "legal": {
+        "title": "Тип организации",
+        "text": "Выберите тип организации - Юридическое лицо, ИП или Самозанятый.",
+        "default_value": "Не выбрано"
+      },
       "PNFL": {
         "title": "ПИНФЛ",
         "default_value": "12345678901234",
