--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2925,5 +2925,21 @@
   "not_found": {
     "description": "Страница не найдена",
     "home_link": "Вернуться на главную"
+  },
+
+  "public_offer_page": {
+    "title": "Пользовательское соглашение"
+  },
+  
+  "service_rules_page": {
+    "title": "Правила пользования"
+  },
+
+  "pdf_previewer": {
+    "page": "Страница",
+    "load": {
+      "load": "Загружаем соглашение",
+      "fail": "Не удалось загрузить соглашение"
+    }
   }
 }
