feat: add spending wallet

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -175,12 +175,17 @@
     "title": "Общий баланс",
 
     "deposit": {
-      "title": "Депозит",
+      "title": "Депозитный",
       "description": "Текущий баланс"
     },
 
     "profit": {
-      "title": "Прибыль",
+      "title": "Прибыльный",
+      "description": "Текущий баланс"
+    },
+
+    "spending": {
+      "title": "Расходный",
       "description": "Текущий баланс"
     }
   },
